fix(shapes.css): fix gap between shape devider and wallpaper in tablet view

--- a/src/styles/shapes.css
+++ b/src/styles/shapes.css
@@ -22,7 +22,7 @@
 
 .shape-divider-tablet {
     position: absolute;
-    bottom: 0;
+    bottom: -1px;
     left: 0;
     width: 100%;
     overflow: hidden;
